feat: removed blocking wait for reconnect, mutagen initializing improvements

--- a/App/Views/Pages/TrayWindowDisconnectedPage.xaml
+++ b/App/Views/Pages/TrayWindowDisconnectedPage.xaml
@@ -30,6 +30,17 @@
 
         <controls:HorizontalRule />
 
+        <TextBlock TextWrapping="Wrap" Foreground="Red" Visibility="{x:Bind ViewModel.ReconnectFailed, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}">
+            <Bold>Reconnect failed</Bold>
+        </TextBlock>
+
+        <TextBlock
+            TextWrapping="Wrap"
+            Margin="0,0,0,10"
+            Foreground="Red"
+            Visibility="{x:Bind ViewModel.ReconnectFailed, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}"
+            Text="{x:Bind ViewModel.ErrorMessage, Mode=OneWay}" />
+
         <HyperlinkButton
             HorizontalContentAlignment="Left"
             HorizontalAlignment="Stretch"
