feat: removed external dependencies (VPN, mutagen) connection management (#111)
Closes: #68

---------

Co-authored-by: Dean Sheather <dean@deansheather.com>

--- a/App/Views/Pages/TrayWindowDisconnectedPage.xaml
+++ b/App/Views/Pages/TrayWindowDisconnectedPage.xaml
@@ -30,6 +30,19 @@
 
         <controls:HorizontalRule />
 
+        <TextBlock FontWeight="semibold"
+                   TextWrapping="Wrap"
+                   Foreground="Red"
+                   Visibility="{x:Bind ViewModel.ReconnectFailed, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}"
+                   Text="Reconnect failed"/>
+
+        <TextBlock
+            TextWrapping="Wrap"
+            Margin="0,0,0,10"
+            Foreground="Red"
+            Visibility="{x:Bind ViewModel.ReconnectFailed, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}"
+            Text="{x:Bind ViewModel.ErrorMessage, Mode=OneWay}" />
+
         <HyperlinkButton
             HorizontalContentAlignment="Left"
             HorizontalAlignment="Stretch"
