--- a/App/Assets/changelog.css
+++ b/App/Assets/changelog.css
@@ -6,6 +6,8 @@
 
     Changes:
       - Removed @media queries in favor of requiring `[data-theme]` attributes
+        on the body themselves
+      - Overrides `--bgColor-default` to transparent
 */
 
 .markdown-body {
@@ -19,8 +21,10 @@
   --base-text-weight-semibold: 600;
   --fontStack-monospace: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
   --fgColor-accent: Highlight;
+
+  --bgColor-default: transparent !important;
 }
-.markdown-body[data-theme="dark"] {
+body[data-theme="dark"] .markdown-body {
   /* dark */
   color-scheme: dark;
   --focus-outlineColor: #1f6feb;
@@ -74,7 +78,7 @@
   --color-prettylights-syntax-meta-diff-range: #d2a8ff;
   --color-prettylights-syntax-sublimelinter-gutter-mark: #3d444d;
 }
-.markdown-body[data-theme="light"] {
+body[data-theme=""] .markdown-body {
   /* light */
   color-scheme: light;
   --focus-outlineColor: #0969da;
