#120 ui improvements & style unification

--- a/App/Views/DirectoryPickerWindow.xaml
+++ b/App/Views/DirectoryPickerWindow.xaml
@@ -13,7 +13,7 @@
     MinWidth="400" MinHeight="600">
 
     <Window.SystemBackdrop>
-        <DesktopAcrylicBackdrop />
+        <MicaBackdrop/>
     </Window.SystemBackdrop>
 
     <Frame x:Name="RootFrame" />
