--- a/App/Views/UpdaterDownloadProgressWindow.xaml
+++ b/App/Views/UpdaterDownloadProgressWindow.xaml
@@ -13,7 +13,7 @@
     MinWidth="500" MinHeight="190">
 
     <Window.SystemBackdrop>
-        <DesktopAcrylicBackdrop />
+        <MicaBackdrop />
     </Window.SystemBackdrop>
 
     <Frame x:Name="RootFrame" />
