--- a/App/Views/Pages/TrayWindowDisconnectedPage.xaml
+++ b/App/Views/Pages/TrayWindowDisconnectedPage.xaml
@@ -36,12 +36,17 @@
                    Visibility="{x:Bind ViewModel.ReconnectFailed, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}"
                    Text="Reconnect failed"/>
 
-        <TextBlock
-            TextWrapping="Wrap"
-            Margin="0,0,0,10"
-            Foreground="Red"
-            Visibility="{x:Bind ViewModel.ReconnectFailed, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}"
-            Text="{x:Bind ViewModel.ErrorMessage, Mode=OneWay}" />
+        <ScrollViewer
+            VerticalScrollBarVisibility="Auto"
+            MaxHeight="500"
+            Visibility="{x:Bind ViewModel.ReconnectFailed, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}">
+
+            <TextBlock
+                TextWrapping="Wrap"
+                Margin="0,0,0,10"
+                Foreground="Red"
+                Text="{x:Bind ViewModel.ErrorMessage, Mode=OneWay}" />
+        </ScrollViewer>
 
         <HyperlinkButton
             HorizontalContentAlignment="Left"
