--- a/App/Views/Pages/DirectoryPickerMainPage.xaml
+++ b/App/Views/Pages/DirectoryPickerMainPage.xaml
@@ -39,6 +39,7 @@
             <ScrollView Grid.Row="0">
                 <TextBlock
                     Margin="0,0,0,20"
+                    IsTextSelectionEnabled="True"
                     Foreground="Red"
                     TextWrapping="Wrap"
                     Text="{x:Bind ViewModel.InitialLoadError, Mode=OneWay}" />
