--- a/App/Views/Pages/TrayWindowDisconnectedPage.xaml
+++ b/App/Views/Pages/TrayWindowDisconnectedPage.xaml
@@ -45,6 +45,7 @@
                 TextWrapping="Wrap"
                 Margin="0,0,0,10"
                 Foreground="Red"
+                IsTextSelectionEnabled="True"
                 Text="{x:Bind ViewModel.ErrorMessage, Mode=OneWay}" />
         </ScrollViewer>
 
