fix: add scrollviewer around the connect error display (#158)
Long error messages when connecting to a Coder deployment could cause
the window to overflow. Simmilar issue as: #146.

Errors are now limited to 500px by the ScrollViewer component.

<img width="325" height="913" alt="image"
src="https://github.com/user-attachments/assets/571503c5-9c6f-4d33-b9f8-1ae3530f72fa"
/>

---------

Co-authored-by: Dean Sheather <dean@deansheather.com>

--- a/App/Views/Pages/TrayWindowMainPage.xaml
+++ b/App/Views/Pages/TrayWindowMainPage.xaml
@@ -62,13 +62,18 @@
 
         <controls:HorizontalRule />
 
-        <TextBlock
-            Text="{x:Bind ViewModel.VpnFailedMessage, Mode=OneWay}"
-            Foreground="Red"
-            Margin="0,6,0,6"
-            TextWrapping="Wrap"
-            Visibility="{x:Bind ViewModel.ShowFailedSection, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}" />
+        <ScrollViewer
+            VerticalScrollBarVisibility="Auto"
+            MaxHeight="500"
+            Visibility="{x:Bind ViewModel.ShowFailedSection, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}" >
 
+            <TextBlock
+                Text="{x:Bind ViewModel.VpnFailedMessage, Mode=OneWay}"
+                Foreground="Red"
+                IsTextSelectionEnabled="True"
+                Margin="0,6,0,6"
+                TextWrapping="Wrap" />
+        </ScrollViewer>
         <TextBlock
             Text="Enable Coder Connect to view your workspaces."
             TextWrapping="Wrap"
